# venv-proxy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GITHUB_DISCUSSION.md  LICENSE  PROMOTION.md  README.md  pyproject.toml  test_cli.py  test_integration.py  test_resolver.py  test_shim.py  venv-proxy-PRD.docx  venv-proxy-TODO.docx
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: publish.yml  test.yml
examples/claude-code/: CLAUDE.md  README.md
examples/claude-code/src/: main.py
venv_proxy/: cli.py  resolver.py  shim.py
venv_proxy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
